fix: menu backdrop blur on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,8 @@ body::-webkit-scrollbar {
 		scrollbar-width: none; /* Firefox */
 	}
 }
+
+.backdrop-blur-lg {
+	backdrop-filter: blur(16px);
+	-webkit-backdrop-filter: blur(16px);
+}
